# mars

./: .gitignore  .travis.yml  AUTHORS.txt  README.md  logo.paa  mars_logo.paa  mod.cpp
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
addons/accent/: $PBOPREFIX$  CfgMenu.hpp  CfgToolbar.hpp  README.md  XEH_PREP.hpp  config.cpp  script_component.hpp
addons/accent/UI/: accent.hpp  resinc.hpp
addons/accent/functions/: fnc_onAccentChange.sqf  fnc_onAccentOpen.sqf  fnc_openAccentPicker.sqf  fnc_resetToDefault.sqf  fnc_saveChanges.sqf  script_component.hpp
addons/ace/: $PBOPREFIX$  README.md  script_component.hpp
addons/ace/functions/: script_component.hpp
addons/acre/functions/: script_component.hpp
addons/ai/: $PBOPREFIX$  CfgAI.hpp  CfgAttributes.hpp  CfgContext.hpp  CfgEventHandlers.hpp  CfgMenu.hpp  CfgModules.hpp  CfgStateMachine.hpp  CfgWaypoints.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/ai/attributes/: populatearea.hpp  settings.hpp
addons/ai/data/: populatearea_ca.paa
addons/ai/functions/: fnc_CAManBase_Move.sqf  fnc__garrison.sqf  fnc_addWaypoint.sqf  fnc_airAttack.sqf  fnc_airOrbit.sqf  fnc_disableAI.sqf  fnc_disembark.sqf  fnc_fireLauncher.sqf  fnc_forceMove.sqf  fnc_forceSpeed.sqf  fnc_garrison.sqf  fnc_getWaypointOptions.sqf  fnc_groupMove.sqf  fnc_handleStateMachine.sqf  fnc_infDefend.sqf  fnc_infPatrol.sqf  fnc_initMan.sqf  fnc_openAISettings.sqf  fnc_openPopulateArea.sqf  fnc_patrolArea.sqf  fnc_populateArea.sqf  fnc_searchNearby.sqf  fnc_selectionToPosition.sqf  fnc_setBehaviour.sqf  fnc_setCombatMode.sqf  fnc_setFormation.sqf  fnc_setSpeedMode.sqf  fnc_setStance.sqf  fnc_setUnitPos.sqf  fnc_suppress.sqf  (+10 more)
addons/artillery/: $PBOPREFIX$  CfgAttributes.hpp  CfgContext.hpp  CfgMenu.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/attributes/: $PBOPREFIX$  CfgAttributes.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/clientmenu/: $PBOPREFIX$  CfgAttributes.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/common/: $PBOPREFIX$  CfgUnitInsignia.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  define.hpp  dikCodes.hpp  macroExecs.hpp  macros.hpp  script_component.hpp  stringtable.xml
addons/damage/: $PBOPREFIX$  CfgContext.hpp  README.md  config.cpp  script_component.hpp
addons/editor/: $PBOPREFIX$  CfgAssetBrowser.hpp  CfgAttributes.hpp  CfgContext.hpp  CfgCursors.hpp  CfgDebriefing.hpp  CfgEventHandlers.hpp  CfgMenu.hpp  CfgModules.hpp  CfgToolbar.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  XEH_preStart.sqf  config.cpp  script_component.hpp
addons/environment/: $PBOPREFIX$  CfgAttributes.hpp  CfgMenu.hpp  CfgToolbar.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  config.cpp  script_component.hpp  stringtable.xml
addons/gui/: $PBOPREFIX$  script_component.hpp
addons/main/: $PBOPREFIX$  CfgEventHandlers.hpp  IE_boot.sqf  IE_lib.sqf  IE_postInit.sqf  IE_signal.sqf  README.md  XEH_postInit.sqf  XEH_preInit.sqf  XEH_preStart.sqf  config.cpp  script_component.hpp  script_debug.hpp  script_macros.hpp  script_mod.hpp
addons/network/: $PBOPREFIX$  README.md  XEH_postInit.sqf  XEH_preInit.sqf  script_component.hpp
addons/units/: $PBOPREFIX$  CfgAttributes.hpp  CfgMenu.hpp  CfgToolbar.hpp  README.md  config.cpp  script_component.hpp  stringtable.xml
addons/zeus/: $PBOPREFIX$  CfgToolbar.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
docs/: .gitignore  Context_Menus.pptx  _config.yml  faq.html  index.html  news.html  robots.txt  style.scss
docs/_includes/: dir_table.html  header.html  meta.html  pages_list.html  tree.html
docs/_layouts/: default.html  defaultWide.html  docsHeaderPage.html  docsPage.html  page.html  post.html
docs/_posts/: 2016-06-30-framework-release.md  2016-11-13-marsrep-0001.md
docs/_sass/: _highlights.scss  _variables.scss
docs/_site/: feed.xml  index.html  sitemap.xml  style.css
docs/docs/: index.html
docs/fonts/: athelas.eot
extensions/: CMakeLists.txt  README.md
extensions/ai/: CMakeLists.txt  Dispatcher.cpp  Helpers.cpp  Helpers.h  Helpers.hpp  Main.hpp  MarsAI.sln  MarsAI.vcxproj  MarsAI.vcxproj.filters  ResourceTree.cpp  ResourceTree.hpp  main.cpp  main.h
extensions/common/: CMakeLists.txt  Common.cpp  Common.h  Helpers.cpp  Helpers.h
extensions/drawing/: CMakeLists.txt  Drawing.cpp  Drawing.h  Helpers.cpp  Helpers.h  Main.cpp  Main.h
extensions/dynload/: CMakeLists.txt
extensions/editor/: CMakeLists.txt  Drawing.cpp  Drawing.h  Drawing.hpp  Helpers.cpp  Helpers.hpp  Macros.h  Main.cpp  Main.h  Main.hpp  Vector.cpp  Vector.hpp
extras/: beautify.js
extras/blank/: CfgContext.hpp  README.md  config.cpp  script_component.hpp  stringtable.xml
extras/logo/: logo_a.psd  logo_v2.psd
extras/toolbar/: template.psd
optionals/: README.md
optionals/ace/: config.cpp
optionals/acre/: $PBOPREFIX$  CfgToolbar.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
optionals/arcomm/: $PBOPREFIX$  CfgAttributes.hpp  README.md  XEH_PREP.hpp  config.cpp  script_component.hpp
optionals/server/: $PBOPREFIX$  README.md  config.cpp  script_component.hpp
tools/: .gitignore  README.md  build.py  check_sqf.py  make.cache  make.cfg  make.py  mars.py  setup.py  sqf_validator.py  stream_rpt.py  toolbar_icon_maker.py
(+2103 files in other folders)
